fixed overlap issue

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -10,6 +10,7 @@ html, body {
 
 .section {
   text-align: center;
+  overflow: hidden;
 }
 
 /* put dots in top right corner */
